apps/nginx/nginx-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: assignment
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /nginx
      rewrite:
        uri: /
      route:
        - destination:
            host: nginx
            port:
              number: 80
